Fixed layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ a {
 footer {
   display: flex;
   align-items: center;
-  margin-top: auto;
+  /* margin-top: auto; */
   box-shadow: 0 0 5px #e5e5e5;
 }
 
@@ -161,9 +161,12 @@ footer p {
 }
 
 .home-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
   gap: 2em;
-  margin: auto 0;
+  margin: auto;
 }
 
 .pct-calculators-container {
